<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/top">

        <item
            android:id="@+id/actionNotes"
            android:icon="@drawable/ic_message_white"
            android:title="@string/Notes" />

        <item

            android:id="@+id/actionMarked"
            android:icon="@drawable/ic_favorite_white"
            android:title="@string/Marked" />
    </group>

    <group android:id="@+id/middle">

        <item
            android:id="@+id/actionTrash"
            android:icon="@drawable/ic_delete_white"
            android:title="@string/Trash" />
    </group>

    <group android:id="@+id/bottom">

        <item
            android:id="@+id/actionAbout"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/About" />
    </group>

</menu>