<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/NestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ScreenTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#00000000"
                android:hint="@string/Title"
                android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:backgroundTint="#00000000"
                android:ems="10"
                android:hint="@string/Text"
                android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine"
                android:paddingEnd="16dp"
                android:paddingStart="16dp" />

            <LinearLayout
                android:id="@+id/KeyTool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/NormalButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Normal" />

                <Button
                    android:id="@+id/BoldButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="115dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Bold"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ItalicButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Italic"
                    android:textStyle="italic" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:visibility="invisible" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/checkbox_selector" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
